# libnss_econf

./: .gitignore  INSTALL.md  README.md  meson.build  meson_options.txt
.github/workflows/: meson-sanitizer.yml  meson.yml
include/: nss-econf.h
src/: aliases.c  econf-XXX.c  files-parse.c  group.c  hosts.c  internal.c  libnss_econf.map  networks.c  passwd.c  proto.c  rpc.c  services.c  shadow.c
tests/: meson.build  tst-getXXXbyYYY_r.c  tst-getXXXent_r.c  tst-getaliasbyname_r.c  tst-getaliasent_r.c  tst-getgrent_r.c  tst-getgrgid_r.c  tst-getgrnam_r.c  tst-gethostbyaddr_r.c  tst-gethostbyname_r.c  tst-gethostent_r.c  tst-getnetbyaddr_r.c  tst-getnetbyname_r.c  tst-getnetent_r.c  tst-getprotobyname_r.c  tst-getprotobynumber_r.c  tst-getprotoent_r.c  tst-getpwent_r.c  tst-getpwnam_r.c  tst-getpwuid_r.c  tst-getrpcbyname_r.c  tst-getrpcbynumber_r.c  tst-getrpcent_r.c  tst-getservbyname_r.c  tst-getservbyport_r.c  tst-getservent_r.c  tst-getspent_r.c  tst-getspnam_r.c
