# This file builds and runs the unit tests

# aliases
tst_getaliasent_r_exe = executable('tst-getaliasent_r', 'tst-getaliasent_r.c', dependencies : libnss_econf_dep)
test('tst-getaliasent_r', tst_getaliasent_r_exe)

tst_getaliasbyname_r_exe = executable('tst-getaliasbyname_r', 'tst-getaliasbyname_r.c', dependencies : libnss_econf_dep)
test('tst-getaliasbyname_r', tst_getaliasbyname_r_exe)

# networks
tst_getnetent_r_exe = executable('tst-getnetent_r', 'tst-getnetent_r.c', dependencies : libnss_econf_dep)
test('tst-getnetent_r', tst_getnetent_r_exe)
tst_getnetbyname_r_exe = executable('tst-getnetbyname_r', 'tst-getnetbyname_r.c', dependencies : libnss_econf_dep)
test('tst-getnetbyname_r', tst_getnetbyname_r_exe)
tst_getnetbyaddr_r_exe = executable('tst-getnetbyaddr_r', 'tst-getnetbyaddr_r.c', dependencies : libnss_econf_dep)
test('tst-getnetbyaddr_r', tst_getnetbyaddr_r_exe)

# protocols (proto)
tst_getprotoent_r_exe = executable('tst-getprotoent_r', 'tst-getprotoent_r.c', dependencies : libnss_econf_dep)
test('tst-getprotoent_r', tst_getprotoent_r_exe)

tst_getprotobyname_r_exe = executable('tst-getprotobyname_r', 'tst-getprotobyname_r.c', dependencies : libnss_econf_dep)
test('tst-getprotobyname_r', tst_getprotobyname_r_exe)

tst_getprotobynumber_r_exe = executable('tst-getprotobynumber_r', 'tst-getprotobynumber_r.c', dependencies : libnss_econf_dep)
test('tst-getprotobynumber_r', tst_getprotobynumber_r_exe)

# rpc
tst_getrpcent_r_exe = executable('tst-getrpcent_r', 'tst-getrpcent_r.c', dependencies : libnss_econf_dep)
test('tst-getrpcent_r', tst_getrpcent_r_exe)

tst_getrpcbyname_r_exe = executable('tst-getrpcbyname_r', 'tst-getrpcbyname_r.c', dependencies : libnss_econf_dep)
test('tst-getrpcbyname_r', tst_getrpcbyname_r_exe)

tst_getrpcbynumber_r_exe = executable('tst-getrpcbynumber_r', 'tst-getrpcbynumber_r.c', dependencies : libnss_econf_dep)
test('tst-getrpcbynumber_r', tst_getrpcbynumber_r_exe)

# services
tst_getservent_r_exe = executable('tst-getservent_r', 'tst-getservent_r.c', dependencies : libnss_econf_dep)
test('tst-getservent_r', tst_getservent_r_exe)

tst_getservbyname_r_exe = executable('tst-getservbyname_r', 'tst-getservbyname_r.c', dependencies : libnss_econf_dep)
test('tst-getservbyname_r', tst_getservbyname_r_exe)

tst_getservbyport_r_exe = executable('tst-getservbyport_r', 'tst-getservbyport_r.c', dependencies : libnss_econf_dep)
test('tst-getservbyport_r', tst_getservbyport_r_exe)
